신메뉴 불금치킨 제조매뉴얼 최종 완료

--- a/goobne/public_html/manual_html/manual_pop/foodManual_01_53menu.html
+++ b/goobne/public_html/manual_html/manual_pop/foodManual_01_53menu.html
@@ -86,7 +86,8 @@
       </p>
     </div>
     <div style="position:relative;">
-    <div style="position:absolute;right:0;top:47%;color:#fff;font-weight: 600;background:#D00003;padding:4px;"><span class="arrow right"></span>묶음배송</div>
+    <span class="arrow right"></span>
+    <div style="position:absolute;right:0;top:47%;color:#fff;font-weight: 600;background:#D00003;padding:4px 8px;border-radius:10px;">묶음배송</div>
     <div class="cl pt10 pb10"  style="border-top: 1px solid #ebebeb;">
       <p class="f_photo_img cl"><span class="f_photo_img"><img src="../images/menu/53_img/02.jpg" alt=""/></span></p>
       <p class="t_img fr">
