11월 23일 오픈준비 최종 완료 7시30분 열리게 스크립트 완료

--- a/goobne/public_html/manual_html/manual_pop/foodManual_01_53_05menu.html
+++ b/goobne/public_html/manual_html/manual_pop/foodManual_01_53_05menu.html
@@ -6,7 +6,7 @@
 
 <!--  S: the  sidebar -->
 <?
-  $menuId='52'; 
+  $menuId='53'; 
   include "../common/manual_left.html";
 ?>
 <!--  E: the  sidebar -->
@@ -80,8 +80,8 @@
           <dd style="font-size:15px;"></dd>          
         </dl>
         </p>
-		<!--<p class="f_photo_img_style2" style="height:200px; padding-top:15px; float:none;"><video src="../images/video/sweet_ch_1.mp4" autoplay loop controls style="width:500px">
-		<source src="../images/video/sweet_ch_1.mp4" tyle="video/mp4"></video></p>-->
+        <p class="f_photo_img_style2" style="height:330px;width:100%; padding-top:15px; float:none;"><video src="../images/video/Friyay.mp4" autoplay loop controls style="width:100%">
+		<source src="../images/video/garlic.mp4" tyle="video/mp4"></video></p>
       </div>
      
     
