--- a/goobne/public_html/manual_html/manual_pop/foodManual_01_53_03menu.html
+++ b/goobne/public_html/manual_html/manual_pop/foodManual_01_53_03menu.html
@@ -22,7 +22,7 @@
 .pb10{height:150px;}
 .pt10 { height: 150px; padding-bottom: 11px;}
  b{font-weight:600;}
- .tabs a{padding:8px 30px;}
+ .tabs a{padding:8px 20px;}
   .arrow {
 	position: absolute;
 	top: 50%;
@@ -66,6 +66,7 @@
 	</ul>
 	<ul class="tabs cl" style="margin-top:5px;">
           <li><a href="foodManual_01_53_04menu.html" title="">굽네 불금치킨 (순살)</a></li>
+          <li><a href="foodManual_01_53_06menu.html" title="">굽네 불금치킨 (콤보)</a></li>
 		  <li><a href="foodManual_01_53_05menu.html" title="">굽네 불금치킨 조리 매뉴얼 (영상)</a></li>
 	</ul>
     <!-- E:탭메뉴 --> 
