조리매뉴얼 리뉴얼 및 신메뉴

--- a/goobne/public_html/manual_html/manual_pop/foodManual_01_55_04menu.html
+++ b/goobne/public_html/manual_html/manual_pop/foodManual_01_55_04menu.html
@@ -6,7 +6,7 @@
 
 <!--  S: the  sidebar -->
 <?
-  $menuId='49'; 
+  $menuId='55'; 
   include "../common/manual_left.html";
 ?>
 <!--  E: the  sidebar -->
@@ -21,27 +21,30 @@
 .pb10{height:150px;}
 .pt10 { height: 150px; padding-bottom: 11px;}
  b{font-weight:600;}
- .tabs a{padding:8px 11px;}
+ .tabs a{padding:8px 30px;}
 </style>
 <div id="container">
 
 <!-- S:page home -->
 <div class="page_content">
-  <p class="bg_visua_banner"> <img src="" alt="" height="128"/><span>굽네 갈릭 마왕 치킨 조리매뉴얼(영상)</span></p>
+  <p class="bg_visua_banner"> <img src="" alt="" height="128"/><span>오븐바사삭 조리매뉴얼(영상)</span></p>
   <div class="page_txt cl">
-    <div class="location fr"><img src="../images/comm/home.png"  alt="home" class="home"><span class="paren">&gt;</span>조리 매뉴얼<span class="paren">&gt;</span>치킨<span class="paren">&gt;</span><span class="nowpage">굽네 갈릭 마왕 치킨 조리매뉴얼(영상)
+    <div class="location fr"><img src="../images/comm/home.png"  alt="home" class="home"><span class="paren">&gt;</span>조리 매뉴얼<span class="paren">&gt;</span>치킨<span class="paren">&gt;</span><span class="nowpage">오븐바사삭 조리매뉴얼(영상)
 </span></div>
     <p class="cl"></p>
     <!-- s:탭메뉴 -->
    <ul class="tabs cl">
-		  <li ><a href="foodManual_01_49menu.html" title="">굽네 갈릭 마왕 치킨(한마리/갈릭 마왕 반반)</a></li>      
-		  <li><a href="foodManual_01_49_02menu.html" title="">굽네 갈릭 마왕 치킨(윙)</a></li> 
-	   	  
+		  <li><a href="foodManual_01_55menu.html" title="">오븐바사삭 (한마리)</a></li>      
+		  <li><a href="foodManual_01_55_02menu.html" title="">오븐바사삭 (윙)</a></li> 
+	   	  <li><a href="foodManual_01_55_03menu.html" title="">오븐바사삭 (순살)</a></li>
     </ul>
     <ul class="tabs cl" style="margin-top:5px;">
-        <li><a href="foodManual_01_49_03menu.html" title="">굽네 갈릭 마왕 치킨(순살)</a></li>
-        <li class="active"><a href="foodManual_01_49_04menu.html" title="">조리매뉴얼(영상)</a></li>
-    </ul>  
+        
+        <!--<li class="active"><a href="foodManual_01_55_04menu.html" title="">조리매뉴얼(영상)</a></li>-->
+        <li><a href="foodManual_01_55_05menu.html" title="">밀폐용기 프랩</a></li>
+        <li><a href="foodManual_01_55_06menu.html" title="">초벌 : 상온트롤리</a></li>
+        <li><a href="foodManual_01_55_07menu.html" title="">FAQ</a></li>
+    </ul>
     <!-- E:탭메뉴 --> 
     <!--S: 01: 주재료--> 
     <br>
@@ -50,7 +53,7 @@
     <div class="L_photo_list">        
         <p class="t_img_style2">
         <dl class="fs13">
-          <dt><p class="s_menu_tit">갈릭 마왕 치킨 (영상)</p></dt>
+          <dt><p class="s_menu_tit">오븐바사삭 (영상)</p></dt>
           <dd style="font-size:15px;"></dd>          
         </dl>
         </p>
