--- a/goobne/public_html/manual_html/manual_pop/foodManual_01_49_04menu_1.html
+++ b/goobne/public_html/manual_html/manual_pop/foodManual_01_49_04menu_1.html
@@ -33,15 +33,18 @@
 </span></div>
     <p class="cl"></p>
     <!-- s:탭메뉴 -->
-   <ul class="tabs cl">
-		  <li ><a href="foodManual_01_49menu.html" title="">굽네 갈릭 마왕 치킨(한마리/갈릭 마왕 반반)</a></li>      
-		  <li><a href="foodManual_01_49_02menu.html" title="">굽네 갈릭 마왕 치킨(윙)</a></li> 
-	   	  
+    <ul class="tabs cl">
+		  <li><a href="foodManual_01_49menu_1.html" title="">굽네 갈릭 마왕 치킨(한마리)</a></li>      
+		  <li><a href="foodManual_01_49_02menu_1.html" title="">굽네 갈릭 마왕 치킨(윙)</a></li> 
+	   	  <li><a href="foodManual_01_49_03menu_1.html" title="">굽네 갈릭 마왕 치킨(순살)</a></li>
     </ul>
     <ul class="tabs cl" style="margin-top:5px;">
-        <li><a href="foodManual_01_49_03menu.html" title="">굽네 갈릭 마왕 치킨(순살)</a></li>
-        <li class="active"><a href="foodManual_01_49_04menu.html" title="">조리매뉴얼(영상)</a></li>
-    </ul>  
+        
+        <li  class="active"><a href="foodManual_01_49_04menu_1.html" title="">조리매뉴얼(영상)</a></li>
+        <li><a href="foodManual_01_49_05menu.html" title="">밀폐용기 프랩</a></li>
+        <li><a href="foodManual_01_49_06menu.html" title="">초벌 : 상온트롤리</a></li>
+        <li><a href="foodManual_01_49_07menu_1.html" title="">FAQ</a></li>
+    </ul> 
     <!-- E:탭메뉴 --> 
     <!--S: 01: 주재료--> 
     <br>
