제조매뉴얼 width 수정 완료

--- a/goobne/public_html/manual_html/mainManual.html
+++ b/goobne/public_html/manual_html/mainManual.html
@@ -24,6 +24,15 @@
     font-weight: 600;
     padding: 6px 0px;
     letter-spacing: -2px;}
+    
+ .main_visua_banner {
+    width: 100%;
+    height: 908px;
+    background: url(/manual_html/images/comm/bg_main.gif)repeat right 0px;
+} 
+.page_content,div#main_container,div#wrap,.main_footer{width:100%;}
+#top_bg {
+    width: 94%;}
 </style>
 </head>
 <body>
